2009-06-20  David Sedeño <david@alderia.com>

  * src/main_window.c: Load correct file
  * data/preferences.ui: Update with glade-3
  
2009-06-20  David Sedeño <david@alderia.com>

  * configure.ac, data/Makefile.am, data/gwget.ui, data/preferences.ui,
    src/gwget_data.c, src/main_window.c, src/main_window.h, src/main_window_cb.c,
    src/new_window.c, src/systray.c, src/utils.c
  Mass changes to migrate to gtkbuilder. Thanks to Artur Roma <ari-tczew@tlen.pl>

2009-06-18  David Sedeño <david@alderia.com>

  * configure.ac, NEWS: Version 1.0.2 

  * src/main.c, src/gnome-application.c: Remove old dbus code. 

  * src/main_window_cb.c (on_md5ok_button_clicked): 
  Make the markup work again. Remove from the traduction str.
        
2009-06-17  David Sedeño <david@alderia.com>

	* src/main_window_cb.c: Remove gnome_vfs and use gio 
	in md5sum comprobation.

2009-06-16  David Sedeño <david@alderia.com>

	* src/main_window_cb.c: Remove gnome-vfs from two functions.

2009-06-15  David Sedeño <david@alderia.com>

	* src/utils.{c,h}: Clean up run_dialog_information and run_dialog_error. Thanks to 
	Jaroslav Imrich <jaroslav.imrich@gmail.com> for the patch.

2009-06-01  David Sedeño <david@alderia.com>

	* src/gwget-application-service.xml, src/gwget-application.{c,h}: 
	Map the openuriwithdest api call to another funcion. 

2009-05-31  David Sedeño <david@alderia.com>

	* src/main.c, src/gwget-application-service.xml: Add OpenURIDest call to 
	Dbus so that OpenURI doesn't break external programs that use Dbus API. 
	Fix: #583929
  
2009-02-18  David Sedeño <david@alderia.com>

	* configure.ac: Fix typo for epiphany version 2.26 (Götz Waschk).
	* data/gwget.desktop.in.in: Fix icon and category. Fix bug #572280.
	Thanks to  Götz Waschk.

2009-02-17  David Sedeño <david@alderia.com>

	* configure.ac: Version 1.0.1
	* NEWS: news for 1.0.1

2009-02-15  David Sedeño <david@alderia.com>
	
	* src/gwget_data.h: don't make gwget_pref be extern (fix the epiphany
	extension)